--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,7 @@ body {
   box-shadow: 5px 5px; }
   .container .img-main {
     border-radius: 1rem;
-    margin-top: 1.2rem;
-    margin-left: 1.5rem;
-    margin-bottom: .8rem;
-    width: 90%;
-    display: block; }
+    width: 20%; }
   .container .blog-text {
     padding: 1.5rem; }
   .container .yellow-txt {
@@ -53,12 +49,14 @@ body {
   .container a:focus {
     color: #f4d04e; }
   .container p {
-    margin: .7rem 0;
+    margin-top: .9rem;
+    margin-bottom: 1rem;
     font-size: 1.4rem;
     color: #6b6b6b; }
 
 .profile {
   margin-top: .9rem;
+  margin-bottom: .5rem;
   display: flex;
   gap: 1rem;
   align-items: center; }
