--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,11 +24,11 @@ body{
     .img-main{
         border-radius:1rem;
         // margin: 1rem auto;
-        margin-top: 1.2rem;
-        margin-left: 1.5rem;
-        margin-bottom: .8rem;
-        width: 90%;
-        display: block;
+        // margin-top: 1.2rem;
+        // margin-left: 1.5rem;
+        // margin-bottom: .5rem;
+        width: 20%;
+        // display: block;
         
     }
     .blog-text{
@@ -68,7 +68,8 @@ body{
     }
     
     p{
-        margin: .7rem 0;
+        margin-top: .9rem;
+        margin-bottom: 1rem;
         font-size: 1.4rem;
         color:hsl(0, 0%, 42%);;
     }
@@ -76,6 +77,7 @@ body{
 
 .profile{
     margin-top: .9rem;
+    margin-bottom: .5rem;
     display: flex;
     gap: 1rem;
     align-items: center;
