--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,12 +23,11 @@ body{
 
     .img-main{
         border-radius:1rem;
-        // margin: 1rem auto;
-        // margin-top: 1.2rem;
-        // margin-left: 1.5rem;
-        // margin-bottom: .5rem;
-        width: 20%;
-        // display: block;
+        margin-top: 1.2rem;;
+        margin-left: 1.5rem;
+        margin-bottom: .5rem;
+        width: 90%;
+        display: block;
         
     }
     .blog-text{
