--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,24 +1,81 @@
+:root{
+    --primary-clr:hsl(0, 0%, 7%);
+    --secondary-clr:hsl(47, 88%, 63%);
+    --white-clr:hsl(0, 0%, 100%);
+    --gray-blue:hsl(228, 45%, 44%);
+    --gray-black:hsl(0, 0%, 42%);
+
+    --ff-body:'Figtree',sans-serif;
+    --fs-html:62.5%;
+    --fs-xl:2.1rem;
+    --fs-400: 1.4rem;
+    --fs-500:1.5rem;
+}
+ @media only screen and (max-width:1138px){
+    :root{
+        --fs-html:50%;
+    }
+
+ }
+ @media only screen and (max-width:963px){
+    :root{
+        --fs-html:40%;
+    }
+
+    a{
+        font-size: .7rem;
+    }
+ }
+
+ @media only screen and (max-width:765px){
+    :root{
+        --fs-html:32%;
+    }
+
+    a{
+        font-size: .5rem;
+    }
+ }
+ @media only screen and (max-width:580px){
+    :root{
+        --fs-html:24%;
+    }
+
+ }
+
+
+ @media only screen and (max-width:438px){
+    :root{
+        --fs-html:19%;
+    }
+
+    .container{
+        width: 27%;
+        box-shadow: 3px 3px;
+    }
+ }
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 html{
-    font-size: 62.5%;
+    font-size: var(--fs-html) ;
 }
 
 body{
-    background-color: hsl(47, 88%, 63%);
+    background-color: var(--secondary-clr);
     line-height: 1.6;
-    font-family: 'Figtree',sans-serif;
+    font-family: var(--ff-body);
     padding: 1rem;
 }
 .container{
     width: 25%;
     margin: 0 auto;
     border-radius: 1rem;
-    border: .2rem solid hsl(0, 0%, 7%);
-    background-color: hsl(0, 0%, 100%);
+    border: .2rem solid var(--primary-clr);
+    background-color:var(--white-clr);
     box-shadow: 5px 5px;
 
     .img-main{
@@ -34,10 +91,10 @@ body{
         padding: 1.5rem;
     }
     .yellow-txt{
-        font-size: 1.5rem;
+        font-size: var(--fs-500);
         padding: .5rem 1.5rem;
-        background-color: hsl(47, 88%, 63%);
-        color:  hsl(0, 0%, 7%);
+        background-color: var(--secondary-clr);
+        color: var(--primary-clr);
         display: inline-block;
         border-radius:.4rem;
         font-weight: 800;
@@ -46,7 +103,7 @@ body{
 
     h2{
         font-weight: 400;
-        font-size: 1.5rem;
+        font-size: var(--fs-500);
         margin-bottom: 1rem;
         
     }
@@ -54,23 +111,23 @@ body{
     a{
         list-style: none;
         text-decoration: none;
-        font-size: 2.1rem;
+        font-size: var(--fs-xl);
         margin-top: .7rem;
         margin-bottom: 1rem;
         font-weight: 800;
-        color: hsl(0, 0%, 7%);
+        color:var(--primary-clr);
     }
  
     a:hover,
     a:focus{
-        color: hsl(47, 88%, 63%);
+        color: var(--secondary-clr);
     }
     
     p{
         margin-top: .9rem;
         margin-bottom: 1rem;
-        font-size: 1.4rem;
-        color:hsl(0, 0%, 42%);;
+        font-size: var(--fs-400);
+        color:var(--gray-black);
     }
 }
 
@@ -85,7 +142,7 @@ body{
         width: 14%;
     }
     h3{
-        font-size: 1.4rem;
+        font-size: var(--fs-400);
         font-weight: 800;
     }
 }
@@ -97,44 +154,5 @@ body{
     margin:  0 auto;
     }
   .attribution a { 
-    color: hsl(228, 45%, 44%);
- }
-
- @media only screen and (max-width:1138px){
-    html{
-        font-size: 50%;
-    }
- }
- @media only screen and (max-width:963px){
-    html{
-        font-size: 40%;
-    }
-    a{
-        font-size: .7rem;
-    }
- }
-
- @media only screen and (max-width:765px){
-    html{
-        font-size: 32%;
-    }
-    a{
-        font-size: .5rem;
-    }
- }
- @media only screen and (max-width:580px){
-    html{
-        font-size: 24%;
-    }
- }
-
-
- @media only screen and (max-width:438px){
-    html{
-        font-size: 19%;
-    }
-    .container{
-        width: 27%;
-        box-shadow: 3px 3px;
-    }
+    color: var(--gray-blue);
  }
