--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body {
 
 .container {
   width: 25%;
-  margin: 0 auto;
+  margin: auto;
   border-radius: 1rem;
   border: 0.2rem solid var(--primary-clr);
   background-color: var(--white-clr);
