--- a/sass/main.scss
+++ b/sass/main.scss
@@ -72,7 +72,7 @@ body{
 }
 .container{
     width: 25%;
-    margin: 0 auto;
+    margin: auto;
     border-radius: 1rem;
     border: .2rem solid var(--primary-clr);
     background-color:var(--white-clr);
